# cks-lab

./: .gitignore  CKS_2026_Lab_Guide.md
cks-lab-exercises/: README.md
cks-lab-exercises-old/: README.md
cks-lab-exercises-old/cheatsheets/: 01-cluster-setup.md  02-cluster-hardening.md  03-system-hardening.md  04-microservice-vulnerabilities.md
cks-lab-exercises-old/labs/01-cluster-setup/lab-1.1-network-policy/: README.md  cleanup.sh
cks-lab-exercises-old/labs/01-cluster-setup/lab-1.2-pod-security-standards/: setup.sh
cks-lab-exercises-old/labs/01-cluster-setup/lab-1.3-ingress-tls/: cleanup.sh  verify.sh
cks-lab-exercises-old/labs/01-cluster-setup/lab-1.4-kube-bench/: README.md
cks-lab-exercises-old/labs/01-cluster-setup/lab-1.5-user-certificate/: README.md  cleanup.sh  setup.sh
cks-lab-exercises-old/labs/01-cluster-setup/lab-1.6-gateway-api/: cleanup.sh  verify.sh
cks-lab-exercises-old/labs/02-cluster-hardening/lab-2.1-rbac-least-privilege/: cleanup.sh  setup.sh
cks-lab-exercises-old/labs/02-cluster-hardening/lab-2.2-audit-policy/: cleanup.sh  verify.sh
cks-lab-exercises-old/mock-exams/mock-exam-3/: setup.sh
cks-lab-exercises/cheatsheets/: 05-supply-chain-security.md  06-monitoring-runtime.md
cks-lab-exercises/mock-exams/mock-exam-1/: README.md  setup.sh
cks-lab-exercises/mock-exams/mock-exam-2/: README.md  setup.sh
cks-lab-exercises/mock-exams/mock-exam-3/: README.md  cleanup.sh  setup.sh
cks-lab-exercises/tests/: test_lab_scripts.sh  test_lab_structure.sh
cks-lab-generator/: .gitignore  README.md  generate_all_labs.py  generator-config.yaml  pyproject.toml  requirements.txt  test_analyzer.py  test_coverage.py  test_lab_generator.py  test_script_generator.py
cks-lab-generator/src/cks_lab_generator/: __init__.py  cli.py  config.py  content_analyzer.py  coverage_tracker.py  lab_generator.py  models.py  script_generator.py
cks-lab-generator/tests/: __init__.py  test_content_analyzer.py
(+487 files in other folders)
